Actions
Bug #12780
closedGRUB is broken after 11479
Status:
Closed
Priority:
Normal
Assignee:
-
Category:
-
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
The size of objset_phys_t increased and GRUB was not updated to account for it. This causes two different failures:
- If a dataset created before 11479 is activated and a dataset with 11479 is selected at boot, GRUB fails to load it with "Selected item cannot fit into memory".
- If a dataset created with 11479 is activated, GRUB fails with "not enough memory to fit 4096 bytes on stack" and the system is rendered completely unbootable.
Related issues
Updated by Andrew Stormont almost 2 years ago
- Related to Bug #11479: zfs project support added
Updated by Andrew Stormont over 1 year ago
The change I submitted here fixes the problem for me: https://code.illumos.org/c/illumos-gate/+/692
Updated by Electric Monk over 1 year ago
- % Done changed from 0 to 100
- Status changed from New to Closed
git commit c94be9439c4f0773ef60e2cec21d548359cfea20
commit c94be9439c4f0773ef60e2cec21d548359cfea20 Author: Andrew Stormont <astormont@racktopsystems.com> Date: 2020-08-31T10:01:33.000Z 12780 GRUB is broken after 11479 Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Igor Kozhukhov <igor@dilos.org> Approved by: Garrett D'Amore <garrett@damore.org>
Actions